--- a/tapo_creds.config
+++ b/tapo_creds.config
@@ -1,3 +1,3 @@
-username=yourtapoemail@gmail.com
-password=yourtapopassword
+username=YourTapoEmail@gmail.com
+password=YourTapoPassword
 ip_address=192.168.X.X
